[package]
name = "ttf2woff2"
version = "0.8.1"
edition = "2021"
description = "A Rust library and CLI for for compressing a TTF font to WOFF2 format."
authors = ["kaoru <k@warpnine.io>"]
license = "MIT"
homepage = "https://github.com/0x6b/ttf2woff2"
repository = "https://github.com/0x6b/ttf2woff2"
readme = "README.md"
categories = ["text-processing"]
keywords = ["fonts", "cli", "woff2", "ttf", "font-conversion"]
rust-version = "1.77"

[lib]
name = "ttf2woff2"
path = "src/lib.rs"

[[bin]]
name = "ttf2woff2"
path = "src/main.rs"

[dependencies]
# Error management
anyhow = "1.0"
thiserror = "1.0"

# Easier path manipulation
camino = { version = "1.1", features = ["serde"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# C++ support
cpp = "0.5"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async runtime
tokio = { version = "1.37", features = ["fs", "rt-multi-thread", "macros"] }

[build-dependencies]
cc = "1.0"
cpp_build = "0.5"
pkg-config = "0.3"

[dev-dependencies]
sha2 = "0.11.0-pre.3"
