[package]
name = "ttf2woff2"
version = "0.9.3"
edition = "2024"
description = "A Pure Rust library and CLI for compressing TTF fonts to WOFF2 format."
authors = ["kaoru <k@warpnine.io>"]
license = "MIT"
homepage = "https://github.com/0x6b/ttf2woff2"
repository = "https://github.com/0x6b/ttf2woff2"
readme = "README.md"
categories = ["text-processing"]
keywords = ["fonts", "cli", "woff2", "ttf", "font-conversion"]
rust-version = "1.85.0"

[lib]
name = "ttf2woff2"
path = "src/lib.rs"

[[bin]]
name = "ttf2woff2"
path = "src/main.rs"

[dependencies]
brotli = "8"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
