[package]
name = "ttf2woff2"
version = "0.9.3"
edition = "2024"
description = "A Pure Rust library and CLI for compressing TTF fonts to WOFF2 format."
authors = ["kaoru <k@warpnine.io>"]
license = "MIT"
homepage = "https://github.com/0x6b/ttf2woff2"
repository = "https://github.com/0x6b/ttf2woff2"
readme = "README.md"
categories = ["text-processing"]
keywords = ["fonts", "cli", "woff2", "ttf", "font-conversion"]

[lib]
name = "ttf2woff2"
path = "src/lib.rs"

[[bin]]
name = "ttf2woff2"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]
timing = []

[dependencies]
brotli = { version = "8", features = ["disable-timer"] }
byteorder = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"], optional = true }
